Add Time to Read. Add Logarithmic Assessment to Tag Cloud

--- a/MichaelHeenanBlog/Pages/Index.cshtml
+++ b/MichaelHeenanBlog/Pages/Index.cshtml
@@ -46,11 +46,20 @@
         </ul>
     </nav>
 
+    @*<div class="tag tag-cloud">
+            <h4 class="text-center">Tag Cloud</h4>
+            @foreach (var tag in Model.TagCloud)
+            {
+                <span class="tag kind-@tag.Category">@tag.Text</span>
+            }
+        </div>*@
+
     <div class="tag tag-cloud">
         <h4 class="text-center">Tag Cloud</h4>
-        @foreach (var tag in Model.TagCloud)
+        @foreach (var tag in Model.TagGroupInfo)
         {
-            <span class="tag kind-@tag.Category">@tag.Text</span>
+
+            <a class="tag kind-@tag.Category" href="/TagIndex/@tag.UrlSlug">@tag.DisplayName</a>
         }
     </div>
 }
