--- a/MichaelHeenanBlog/Pages/TagIndex.cshtml
+++ b/MichaelHeenanBlog/Pages/TagIndex.cshtml
@@ -49,13 +49,13 @@
             </nav>
         }
 
-        <div class="tag tag-cloud">
+        @*<div class="tag tag-cloud">
             <h4 class="text-center">Tag Cloud</h4>
             @foreach (var tag in Model.TagCloud)
             {
                 <span class="tag kind-@tag.Category">@tag.Text</span>
             }
-        </div>
+        </div>*@
 
 
 
