Add Styling Changes

--- a/MichaelHeenanBlog/Areas/Admin/Pages/CreateBlogPost.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/CreateBlogPost.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
 @model MichaelHeenanBlog.Areas.Admin.Pages.CreateBlogPostModel
 @{
-    ViewData["Title"] = "CreateBlogPost";
+    ViewData["Title"] = "Create Blog Post";
+    Layout = "_Layout3";
 }
 
 <h1>Create Blog Post</h1>
