--- a/MichaelHeenanBlog/Areas/Admin/Pages/DeletePost.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/DeletePost.cshtml
@@ -1,6 +1,8 @@
 ﻿@page "{blogPostId:Guid}"
 @model MichaelHeenanBlog.Areas.Admin.Pages.DeletePostModel
 @{
+    ViewData["Title"] = "Delete Blog Post";
+    Layout = "_Layout3";
 }
 
 <H1>Delete Post</H1>
