--- a/MichaelHeenanBlog/Areas/Admin/Pages/Index.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/Index.cshtml
@@ -2,6 +2,7 @@
 @model MichaelHeenanBlog.Areas.Admin.Pages.IndexModel
 @{
     ViewData["Title"] = "Admin Home page";
+    Layout = "_Layout3";
 }
 
 <div class="bg-light">
