--- a/MichaelHeenanBlog/Areas/Admin/Pages/SignOut.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/SignOut.cshtml
@@ -1,6 +1,8 @@
 ﻿@page
 @model MichaelHeenanBlog.Areas.Admin.Pages.SignOutModel
 @{
+    ViewData["Title"] = "Admin Sign Out";
+    Layout = "_Layout3";
 }
 
 <h1>Administrator Sign Out</h1>
