--- a/MichaelHeenanBlog/Pages/SignIn.cshtml
+++ b/MichaelHeenanBlog/Pages/SignIn.cshtml
@@ -2,6 +2,7 @@
 @model MichaelHeenanBlog.Pages.SignInModel
 @{
     ViewData["Title"] = "Admin Sign In";
+    Layout = "_Layout3";
 }
 
 <h1>Administrator Sign In</h1>
