--- a/MichaelHeenanBlog/Pages/ViewSingleBlogPost.cshtml
+++ b/MichaelHeenanBlog/Pages/ViewSingleBlogPost.cshtml
@@ -2,6 +2,7 @@
 @model MichaelHeenanBlog.Pages.ViewSingleBlogPostModel
 @{
     ViewData["Title"] = "View Single BlogPost";
+    Layout = "_Layout3";
 }
 
 <div class="card mb-4 border-primary">
