--- a/MichaelHeenanBlog/Areas/Admin/Pages/EditPost.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/EditPost.cshtml
@@ -1,6 +1,8 @@
 ﻿@page "{blogPostId:Guid}"
 @model MichaelHeenanBlog.Areas.Admin.Pages.EditPostModel
 @{
+    ViewData["Title"] = "Edit Blog Post";
+    Layout = "_Layout3";
 }
 
 <h1>Edit Post</h1>
@@ -14,14 +16,14 @@
     <div class="form-group">
         <label>
             Title
-            <input asp-for="NewPostContent.Title" type="text" class="form-control" aria-describedby="titleHelp" value="@Model.PostContent.Title" />
+            <input asp-for="NewPostContent.Title" type="text" class="form-control" aria-describedby="titleHelp" value="@Model.PostContent.Title" required/>
         </label>
         <small id="titleHelp" class="form-text text-muted">The title of the blog post</small>
     </div>
     <div class="form-group">
         <label>
             Body
-            @Html.TextArea("NewPostContent.Body", Model.PostContent.Body, new { @class = "form-control", @cols = 150, @rows = 5 })
+            @Html.TextArea("NewPostContent.Body", Model.PostContent.Body, new { @class = "form-control", @cols = 150, @rows = 5, @required = true })
         </label>
         <small id="bodyHelp" class="form-text text-muted">The body of the blog post</small>
     </div>
