--- a/MichaelHeenanBlog/wwwroot/css/site.css
+++ b/MichaelHeenanBlog/wwwroot/css/site.css
@@ -76,7 +76,7 @@ body {
     text-align: center;
     font: 1em Arial, San-Serif;
     color: #FFF;
-    background: #606D7D;
+    background: #6c757d;
 }
 
 .tag {
