--- a/MichaelHeenanBlog/Areas/Admin/Pages/Index.cshtml
+++ b/MichaelHeenanBlog/Areas/Admin/Pages/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "_Layout3";
 }
 
-<div class="bg-light">
+<div>
     <h2 class="display-4 text-center">Posts List</h2>
 
     <form method="post">
